adding support for ascii and binary

--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
 	<div><label for="content">Encoded string</label><input id="content" type="text"></div>
 	<div><label for="decoding">Decoding pattern</label><input id="decoding" type="text"></div>
 	<div><input type="button" value="Decode" onclick="createResult()"></div>
-	<div><label>Result</label><input id="result" type="text" disabled></div>
+	<div><label>Result</label><input id="result" type="text"></div>
 	<script>
 		function createResult() {
 			var content = document.getElementById("content").value;
